--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -55,7 +55,7 @@
       "error"
     ],
     "@typescript-eslint/explicit-function-return-type": [
-      "error",
+      "warn",
       {
         "allowExpressions": true
       }
